<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">



    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear">

    <!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etfname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/fname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etlname"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Choose Role" />

            <Spinner
                android:id="@+id/sprole"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:entries="@array/roles" />

            <EditText
                android:id="@+id/etutaid"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:ems="10"
                android:hint="@string/utaid"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etvehicle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/vehicle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etpermit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/permit"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btregister1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>